--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "npm": "6.9.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-owl-carousel2": "^0.3.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "request": "^2.88.0"
   },
   "scripts": {
     "start": "react-scripts start",
